[jonathan] style taverne. html
center texte favorite
change font favorite

--- a/taverne.html
+++ b/taverne.html
@@ -133,9 +133,11 @@
         padding-bottom: 50px;
         font-size: 3vw;
     }
-    #favorite td, #favorite th  {
+    #favorite td {
         font-family: Calibri,Candara,Segoe,Segoe UI,Optima,Arial,sans-serif !important;
-
+    }
+    #favorite td, #favorite th  {
+        text-align: center;
     }
         </style>
 
