--- a/Taverne_accueil.html
+++ b/Taverne_accueil.html
@@ -85,10 +85,11 @@
                 margin-right: 10px;
                 margin-top: 1vw;
                 height: 5vw;
+                line-height: 1vw;
             }
             .connection input {
                 height: 2vw;
-                  width: 150px;
+                  width: 10vw;
                   font-size: 1vw;
                   -webkit-border-radius: 1vw;
                 -moz-border-radius: 1vw;
@@ -97,6 +98,8 @@
                 text-align: center;
             }
             iframe {
+            	width: 50vw;
+            	height: 28vw;
                 display: block;
                 margin: auto;
             }
@@ -139,7 +142,7 @@
 					<!-- A new release on chrome will soon block this feature (only cookies for "samesite" attribute1)
 						We add a video in format mp4 at beginning but it's too heavy for github, even in a .zip
 						We tried through youtube but we didn't succeed so we finally choose dailymotion-->
-					<iframe frameborder="0" width="640" height="360" src="https://www.dailymotion.com/embed/video/k1qNr8Lzrnd2cIw6Bw9?autoplay=1&queue-enable=false" allowfullscreen="" allow="autoplay"></iframe>				
+					<iframe frameborder="0" src="https://www.dailymotion.com/embed/video/k1qNr8Lzrnd2cIw6Bw9?autoplay=1&queue-enable=false" allowfullscreen="" allow="autoplay"></iframe>				
 				</div>
 				<h2 id="pré_title">La Taverne du Troll c'est quoi ?</h2>
 				<div class="présentation">
