responsive evenement.html

--- a/évènement.html
+++ b/évènement.html
@@ -28,15 +28,14 @@
     		margin: auto;
     		width: 35%;
     		margin-top: 50px;
-    		/* Compense la marge top positive de l'element suivant (qui est attribuee a toutes les div event) */
-    		margin-bottom: -150px;
+    		padding-bottom: 5vw;
+
 
     	}
     	.event {
-    		height : 800px;
     		margin: auto;
     		width: 50%;
-    		margin-top: 200px;
+    		padding-bottom: 10vw;
     	}
 
     	.descri {
