--- a/user.html
+++ b/user.html
@@ -11,7 +11,7 @@
 		<style type="text/css">
 			#member {
 				margin: auto;
-				margin-left: 7em;
+				margin-left: 4vw;
 				padding-bottom: 20px;
 			}
 
@@ -30,7 +30,7 @@
 			}*/
 			#admin {
 				margin: auto;
-				margin-left: 7em;
+				margin-left: 4vw;
 			}
 			#member p{
 				font-size: 2vw;
@@ -41,14 +41,14 @@
 				font-family: Calibri,Candara,Segoe,Segoe UI,Optima,Arial,sans-serif;
 			}
 			h1 {
-				font-size: 3em;
+				font-size: 4vw;
 				margin: 20px;
 				text-decoration: underline;
 				text-shadow: black 1px 0 10px;
 			}
 			h2 {
 				margin-top: 15px;
-				font-size: 2.5em;
+				font-size: 2.5vw;
 				text-decoration: underline;
 				text-transform: uppercase;
 				text-shadow: black 1px 0 10px;
@@ -63,7 +63,7 @@
 				flex:1;
 			}
 			ul {
-				font-size: 2em;
+				font-size: 2vw;
 				margin-top: 10px;
 				margin-bottom: 30px;
 			}
@@ -81,10 +81,10 @@
 				display: flex;
 				align-items: center;
 				margin: auto;
-				width: 20em;
+				width: 20vw;
 			}
 			#coffre{
-				width: 3.5em;
+				width: 3.5vw;
 				height: auto;
 			}
 		</style>
